Implement basic A2A demo for ACK-ID identity exchange

--- a/docs/demos/demo-e2e.mdx
+++ b/docs/demos/demo-e2e.mdx
@@ -27,7 +27,7 @@ pnpm demo:e2e
 Alternatively, navigate directly into the demo directory (`./demos/e2e`) and run:
 
 ```sh
-pnpm start
+pnpm run demo
 ```
 
 ## Demo Overview
