--- a/docs/demos/demo-identity.mdx
+++ b/docs/demos/demo-identity.mdx
@@ -50,7 +50,7 @@ pnpm run demo:identity
 Alternatively, from within the demo directory (`./demos/identity`):
 
 ```sh
-pnpm start
+pnpm run demo
 ```
 
 ## Demo Walkthrough
