--- a/docs/demos/demo-payments.mdx
+++ b/docs/demos/demo-payments.mdx
@@ -42,7 +42,7 @@ pnpm run demo:payments
 Alternatively, run from within the demo directory (`./demos/payments`):
 
 ```sh
-pnpm start
+pnpm run demo
 ```
 
 ## ACK-Pay Demo Components
