--- a/docs/demos/demos.mdx
+++ b/docs/demos/demos.mdx
@@ -5,7 +5,7 @@ description: "Interactive demos demonstrating key parts of the Agent Commerce Ki
 
 Interactive demos and their source code serve to illustrate core patterns of the **Agent Commerce Kit (ACK)**. Each demo has a dedicated detailed walkthrough to guide exploration.
 
-We recommend running these demos from the project root, but you can also run each directly from its specific demo directory using `pnpm start`.
+We recommend running these demos from the project root, but you can also run each directly from its specific demo directory using `pnpm run demo`.
 
 ## Identity Demo
 
