Add ES256 (secp256r1) support
Updates the key types to be either Multikey (for Multibase keys) or
JsonWebKey2020 (for JWK keys)

--- a/docs/demos/demo-identity.mdx
+++ b/docs/demos/demo-identity.mdx
@@ -110,7 +110,7 @@ DID Documents broadcast public keys and essential metadata:
   "verificationMethod": [
     {
       "id": "did:key:zQ3shg46zUAV...#jwk-1",
-      "type": "EcdsaSecp256k1VerificationKey2019",
+      "type": "JsonWebKey2020",
       "controller": "did:key:zQ3shg46zUAV...",
       "publicKeyJwk": { "kty": "EC", "crv": "secp256k1" }
     }
@@ -127,7 +127,7 @@ DID Documents broadcast public keys and essential metadata:
   "verificationMethod": [
     {
       "id": "did:web:agent.example.com#jwk-1",
-      "type": "EcdsaSecp256k1VerificationKey2019",
+      "type": "JsonWebKey2020",
       "controller": "did:web:agent.example.com",
       "publicKeyJwk": { "kty": "EC", "crv": "secp256k1" }
     }
