Replace Slack URLs with Discord

--- a/docs/resources/contributing.mdx
+++ b/docs/resources/contributing.mdx
@@ -27,11 +27,11 @@ We welcome contributions of all kinds, from documentation improvements and bug r
 </Card>
 
 <Card
-  title="Slack"
-  icon="slack"
+  title="Discord"
+  icon="discord"
   iconType="solid"
-  href="https://join.slack.com/t/catenalabscommunity/shared_invite/zt-35o31b0r8-RvnEPFaGHqYIkFs6k5QjTA"
+  href="https://discord.gg/3V34SmdHPq"
 >
   Join discussions about improving, developing, and using ACK on the Catena Labs
-  Community Slack workspace.
+  Community Discord server.
 </Card>
