--- a/docs/demos/example-identity.mdx
+++ b/docs/demos/example-identity.mdx
@@ -122,7 +122,7 @@ curl --request POST \
   --data '{
   "metadata": { "txHash": "0x123abc456def" },
   "payerDid": "did:web:0.0.0.0%3A3458:wallet",
-  "paymentToken": "eyJhbGciOiJFUzI1NiIsInR5cCI6IkpXVCJ9...",
+  "paymentRequestToken": "eyJhbGciOiJFUzI1NiIsInR5cCI6IkpXVCJ9...",
   "paymentOptionId": "option1"
 }'
 ```
