--- a/docs/demos/demo-payments.mdx
+++ b/docs/demos/demo-payments.mdx
@@ -65,6 +65,13 @@ Client requests access to a protected resource. Server responds with an HTTP `40
   Client performs an on-chain stablecoin (USDC) payment to the Server’s wallet
   on Base Sepolia testnet. Alternatively, a credit card payment can be handled
   via a Payment Service.
+
+This demo also supports an on-chain payment on **Solana devnet** using SPL‑USDC.
+In that path, the Client transfers USDC directly to the Server’s Solana address
+and includes a Memo bound to the signed Payment Request for replay protection. The
+Receipt Service verifies the memo, mint, recipient and exact amount before issuing
+a receipt.
+
 </Step>
 
 <Step title="Receipt Request">
