Add e2e solana example (#37)
* Add Solana e2e example

* Prevent replay attack via receipt memo instruction

- fixed some type errors
- added a memo instruction that is verified in the receipt service to prevent replay attacks

* Update README.md

* Add docs for on-chain payments

* Use kit + code review

* Code review

- Verify Issues key to be a signer

* Remove Memo instruction

- I think the Memo is probably not necessary when we check the JWT signature in the receipt. Will make it easier for agents to use.

* refactor: clean up Solana payment integration

Address review feedback and improve project conformance:

- Remove gill, bs58, @solana/keys, @solana/addresses dependencies
- Use ACK's generateKeypair and bytesToBase58 for Solana key generation
- Replace hardcoded chain ID with solana.chainId constant
- Extract helpers: networkLabel, executePayment, fetchBalance,
  extractSignerPubkeys, fetchTransaction
- Replace console.log/console.error with log() from cli-tools
- Remove unnecessary comments and unused catch parameters
- Add lamports to cspell config
- Clean up docs: placeholder address, remove chain-specific sections

---------

Co-authored-by: Matt Venables <matt@venabl.es>

--- a/docs/ack-pay/receipt-verification.mdx
+++ b/docs/ack-pay/receipt-verification.mdx
@@ -20,7 +20,7 @@ _Example ACK Receipt Verifiable Credential:_
 {
   "@context": [
     "https://www.w3.org/2018/credentials/v1",
-    "https://agentcommerkit.org/contexts/payment/v1" // Example ACK context
+    "https://agentcommercekit.org/contexts/payment/v1" // Example ACK context
   ],
   "id": "urn:uuid:5c358383-1d93-4956-8d0c-6e41e4d29901", // Unique receipt ID
   "type": ["VerifiableCredential", "ACKPaymentReceipt"],
