--- a/docs/demos/demo-payments.mdx
+++ b/docs/demos/demo-payments.mdx
@@ -62,9 +62,9 @@ Client requests access to a protected resource. Server responds with an HTTP `40
 </Step>
 
 <Step title="Making Payment">
-  Client performs an on-chain stablecoin (USDC) payment to the Server’s wallet
-  on Base Sepolia testnet. Alternatively, a credit card payment can be handled
-  via a Payment Service.
+  Client performs an on-chain stablecoin (USDC) payment to the Server's wallet
+  on Base Sepolia testnet or Solana devnet. Alternatively, a credit card payment
+  can be handled via a Payment Service.
 </Step>
 
 <Step title="Receipt Request">
@@ -87,6 +87,6 @@ Client requests access to a protected resource. Server responds with an HTTP `40
 
 Explore comprehensive ACK-Pay functionalities and integrations in real-world applications involving diverse payment methods and Payment Service integrations:
 
-- [View Payments Demo Source Code](https://github.com/agentcommercekit/ack/tree/main/demos//payments)
+- [View Payments Demo Source Code](https://github.com/agentcommercekit/ack/tree/main/demos/payments)
 - [ACK Documentation](https://agentcommercekit.com)
 - [ACK-Pay Details](/ack-pay/introduction)
